[package]
name = "crypto-in-one-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11"
chrono = "0.4"
futures = "0.3.28"
thiserror = "1.0.36"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tungstenite = { version = "0.19.0", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.19.0", features = ["rustls-tls-native-roots"] }
rust_decimal = "1.30"
rust_decimal_macros = "1.30"
url = "2.2.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"